# ChangeLog for dev-python/alembic
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/alembic/ChangeLog,v 1.14 2014/11/05 07:58:55 patrick Exp $

*alembic-0.6.7 (05 Nov 2014)

  05 Nov 2014; Patrick Lauer <patrick@gentoo.org> +alembic-0.6.7.ebuild:
  Bump

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> alembic-0.6.0.ebuild,
  alembic-0.6.3.ebuild, alembic-0.6.4.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*alembic-0.6.4 (01 May 2014)

  01 May 2014; Ian Delaney <idella4@gentoo.org> +alembic-0.6.4.ebuild:
  bump; drop py2.6 3.2 add py3.4, upgrade test phase

  22 Mar 2014; Ian Delaney <idella4@gentoo.org> alembic-0.6.0.ebuild,
  alembic-0.6.3.ebuild:
  update deps for test phase, fixes Bug #501362 by our Patrick

*alembic-0.6.3 (15 Feb 2014)

  15 Feb 2014; Patrick Lauer <patrick@gentoo.org> +alembic-0.6.3.ebuild:
  Bump

  21 Jan 2014; Patrick Lauer <patrick@gentoo.org> -alembic-0.4.2.ebuild,
  -alembic-0.5.0.ebuild:
  Remove old

  22 Oct 2013; Jan Matejka <yac@gentoo.org> metadata.xml:
  removing idella and proxy-maintainers

*alembic-0.6.0 (22 Oct 2013)

  22 Oct 2013; Jan Matejka <yac@gentoo.org> +alembic-0.6.0.ebuild:
  verbump with python 3.3 support, refs 488862

  21 Oct 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Fix e-mail address.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> alembic-0.4.2.ebuild,
  alembic-0.5.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*alembic-0.5.0 (13 Jun 2013)

  13 Jun 2013; Patrick Lauer <patrick@gentoo.org> +alembic-0.5.0.ebuild:
  Bump

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  03 Feb 2013; Mike Gilbert <floppym@gentoo.org> alembic-0.4.2.ebuild:
  Add support for python2.6, 3.1, 3.2.

*alembic-0.4.2 (03 Feb 2013)
