@@ -1,10 +1,32 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST alembic-0.6.0.tar.gz 407260 SHA256 ad28e2e4f8bb712d1e67abc709b0735525541e0ebc509dbf00bcd383b5c602ca SHA512 e93fcc14efef85f9235f4d5e1c2d3d3f8b83717b0f703713b86206ad941eee981fc8baee8bfa099ecb5bdeefcf12b84b6549fed2048ff360e43388c49b4538fb WHIRLPOOL b2f678ed4ee9f30b464134ad7801ec8d731dc3427bd6b85600070c258993b5107de9964837dada1eeb0fc53d30ba3affa7fc0cf6ea050e4cef75719fea467742
 DIST alembic-0.6.3.tar.gz 437722 SHA256 35dfad44254bd0731ac611de211957a37dcc8d53b67a134c187e0b32a8b43842 SHA512 683784dd10c76f91f0cc54224b85afcd2ced17fee0d161cf82d8c6644441b907bda32497b84ffb09e90b602f68da20bdf853d40f14100894c124abc16f50562e WHIRLPOOL 861a7b07ff93885748c02bfda2443fd5a9842226c7f18541db654504732b039493e6107acc265ec90bb9cb0862bb90bb875308ad0ee7f9aa726c335c746bc228
 DIST alembic-0.6.4.tar.gz 458365 SHA256 5a0a36c747c28f50366ac046da43f50055c84d1d9d8ed3c09b9b5b9a6c516832 SHA512 8bcc294329b58f672582384e98bd015933efcaa4345f28e67b34bd623cce7a7cd532837ddfe71e286c73c98d70f161cb722b5dd285a4a381c2a912329c196324 WHIRLPOOL 0ee984b07a8fccc4ab00439d3e40b51361c34166b1fad083f401e9ec230b4b665d0acba890e24183e250791785f419bada9c28b92bc87ebd016982f00ccff264
 DIST alembic-0.6.7.tar.gz 467942 SHA256 55c35e897d2970bae45345ff4c8a190e773a08f4289299de694ebfebfb0c6946 SHA512 21bf62bb035cac6686599ec3a5a7dcd8505ca590f37f5667990f18b3070b1490ca083950cec9714fe10947ca05df9598e14c69eb915d3e5d5d958414d00dc5f6 WHIRLPOOL b3a10fbef104167cbd89f08e6dfe00a2559b2e6d620026539af64911d23f5db60873c91c995d55204bbaed6646f2f7f9b834e477c690d0b5abd8050de3e1fdd9
+DIST alembic-0.7.4.tar.gz 604836 SHA256 550f10b2266f689778eced2fed899bfd05755737478454b97fb99385f2e780e5 SHA512 258d2f7fe046e7fd662fae0b68ba19988cc59fd1d0d8bb6e1b3b0ea133d076d649d6bc99933ac50be538d1c4d64062b2b2d259cb042d9bbddf7346d0283af383 WHIRLPOOL eaa17f8b0bd91ca8eb11292bc0be45443b43564b06ec1461c5d6b60dcbd3777c443c6a355164057334080a7dbf37f32cf591f176deb52afdb12d7ca79de4a766
 EBUILD alembic-0.6.0.ebuild 1005 SHA256 bb1dc71c1ddd7fbcecd69cb4616af00dd741521a0929ad24bde5d0ce5433bd29 SHA512 760be27bbff7cbdc229c1cd68caee38fd8f358edcf988225e7d87cb2a2135d55f81e17e7bbdde4958e4976b6b8c69cf9fdc59a4f835b374c748cae9f25bf702d WHIRLPOOL 75b295041924db17d69d89db10fab9b73f0f16cfc22e5c1fcb816238e1a5122c7490c04e3b90006acdb883283f3abe2569c67895938b502c25a467fdce18a1d1
 EBUILD alembic-0.6.3.ebuild 1153 SHA256 fb425b0641659c149455bd923e23a4a8ddd19dbecd6097904f6d027b4e2fb9aa SHA512 fca1b4f665dec3ac4fe0b942f2eba0526d2ca033976455c3379faf09942f1afc0815352289ed311b1234af3ea3a1bbc1d23de8b2b67e1aad96342c63bcd1acf9 WHIRLPOOL 90069cd80a9d46a5ea9ee1a69713d9c42dacff2a0342430d66a82d5fd94a5178bce972945b67e8ca1c6e6a8b332c7b3afeeb519945ee51f1a9c3f56fb4506f1f
 EBUILD alembic-0.6.4.ebuild 1519 SHA256 62693127b39df45b8a94b5f01f676688d8968201ed8376224e39d0399c67a774 SHA512 97e4e100ff74851a42dabbe866b0df3d711ac7cfa5ae85fede2d8fa896b046a02ed21250ea4ac4f687b6115fd521059ed3888d9a58f77b8324605667ffa33ede WHIRLPOOL fce689c2b8e25267b470a923254969f4460b9e83163149c1752dc597e7aad9ed796c6cc8681793b409799e650fdc522d528ef80ee0461d1b43da041b25d62543
 EBUILD alembic-0.6.7.ebuild 1520 SHA256 ba00361f698a92c53c30dd50064d5782f109c8d8763de179388931eba3945ee2 SHA512 4108b8108b076f55210346daf3c2d0c7709440fa67ed3a75c05ba245b3a86243ec0d01a69f3cdbfcd29594f0c0c2434ab600a025b6e37660686954619eafa389 WHIRLPOOL 22d909a6f776ec80a7f6376ebb4f9bc5add6ea2587c0e206a3905dbbb41761be3fbacc71581cd0cad13f03ab383042ca019f2d25b964cb2d8f79ce2f8248f516
-MISC ChangeLog 2153 SHA256 99f2db5c186a9b91e57cfb8cf4d88576160d3d66a51504ffe9910465073dec33 SHA512 847fe3f6d893e943ce406a085fde6c4c51ef7ddf5826bde3887af40489eca8f200c58ce65f61b46637aaacaa329dfdde3bce774ff7de80ec9ef8e539c0ca0164 WHIRLPOOL 539786c2d16c15d20b912839723536ff5897e7824f666da209dd0d58a1a38f07d5dc8389564841ece34ae46d4969fda701f5cca9791af6f2a3150478b9a82c58
+EBUILD alembic-0.7.4.ebuild 1406 SHA256 3e30c53b052432db9c48ad63df75b51751aa7d3a53d5d71bad8c6117d890a547 SHA512 703615c6a267842629345b7f312cb14e10fd45cce1b733daa09b5bda91d127d76b0222d24f30b237b96d8fbd6820b811ca5aea8f59ec47663ac5b9f16b3bd646 WHIRLPOOL 02eef78f29fa50d26802c9109700e36c91d472aebba97a774f587f7609248f4f2a44c8600f60dc9bd4e815eb57c2280a26ce07435e9b034fe4fa30895a7d7de6
+MISC ChangeLog 2278 SHA256 aac13f4931bf76e1361d2d77afd01ecbd47dfc070746c216725b637c1db8c739 SHA512 2cd7e57b6c120d213a1f15f733d2b62128adf669f4461b2df306707dd779619667d3d8f88012c2b63ea7db08e72ad8832b7ee4518aa1897aa96d4b20259aec4d WHIRLPOOL ce342bf89502c89f0571fb806da326eb17a81d9ca7de10f30058a3e5a5bb95304d6586f30d17c0e1bc211a1ca4ea9d9551bf6591517a331c36e7e872ba8e82cc
 MISC metadata.xml 270 SHA256 9313dc4136ecea461608152a91270a8a7400bcf4dba38209357e1527f002c2b1 SHA512 1ede14289198c0078efeb81316f1a6eaaf8aaa18562689f2d764ed8cb13ed6c00260a46d4995d48a3c52188dc2f64b55908b3f7f76dadd4ef50abbbf28041be7 WHIRLPOOL 6b5b0b8752cc8d307061e8f31ef3f892ed6ea9878facb7ac0f7970c757c60ac9bc620d55b2aa25a62aab5e36ac72c53758bc58e63fb09137505be78abab9e35d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUzGirAAoJEGSje+quGaTocRUP/R4z6FgFHgzrhPJ4dUAx0mmu
+D1X3zYOXIADZqQ6eHPl5akLcbFZgbCE9tMZo/Tt4b2txHOioU8RnsIcRUZ+5X8ES
+ZtzPaWPPChA1aHWMmrOoYHv/HcFk6DOGkmTS3wi4UWxv5M0LD17jSRxKi8fM3AAB
+Dw+T+ojf/Y2LIRBcBFIdOXYDJiE7cZSV8Y/Zc5wX5y4DjRkFqUu5DFjhF3NsCZLX
+l14U0bpv++Uwkmp3xYM/FqrDFrQCFYEIvGVEgPXr1hcuovPBnz19q1/unHQewDtj
+AUd0og6lyTQKswpophosJfGAQnxa02SmDa9uac6yMMp3WOvDvmv0fjjShYpnJ2aY
+gCjY/tEZ8aNuptevld6XqvUxTUlMKx94KZ2amHJX0fqqkMiYfpxzj8VZAeTKRS9K
+BIxLqG+u58JUiGyw3wY51SzDzOhlIE9IF9rCmMrHPbqtBO+Miw8577BrPq9oDfGT
+Deay48oDjRAiFQ1yitoBVPwzRPj8Lw4Rg1LX23sMcBkl9AXp7l5KFZ8KCfpbw/K4
+sZfTkySdbf5frHrF+vg0nYNzCB1lB23Ahz6ljgwQd8sUvlcMvrbvvJFA/sWSxVjB
+a/xOXq2nyg69Bwc49PcgziwrPehkLZ2Buu7FjzYvtsxQRA/hzJaREx0/a1pQmI00
+XLHDGjJ77uSjvDppRDaD
+=w8+h
+-----END PGP SIGNATURE-----
