@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/alembic
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/alembic/ChangeLog,v 1.14 2014/11/05 07:58:55 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/alembic/ChangeLog,v 1.15 2015/01/31 05:31:02 prometheanfire Exp $
+
+*alembic-0.7.4 (31 Jan 2015)
+
+  31 Jan 2015; Matthew Thode <prometheanfire@gentoo.org> +alembic-0.7.4.ebuild:
+  bump
 
 *alembic-0.6.7 (05 Nov 2014)
 
